--- a/public/assets/locales/components/ge.json
+++ b/public/assets/locales/components/ge.json
@@ -4,5 +4,11 @@
     "crumb": "პროდუქტები",
     "empty": "კალათა ცარიელია",
     "buy": "იყიდე ეხლა",
-    "total": "მთლიანად"
+    "total": "მთლიანად",
+    "Brand": "ბრენდი",
+    "Title": "მოდელი",
+    "Category": "კატეგორია",
+    "Price": "ფასი",
+    "Rating": "რეიტინგი",
+    "Description": "აღწერილობა"
 }
