--- a/public/assets/locales/components/ge.json
+++ b/public/assets/locales/components/ge.json
@@ -1,5 +1,6 @@
 {
     "Add": "დამატება",
+    "remove": "წაშლა",
     "Home": "მთავარი",
     "crumb": "პროდუქტები",
     "empty": "კალათა ცარიელია",
@@ -10,5 +11,6 @@
     "Category": "კატეგორია",
     "Price": "ფასი",
     "Rating": "რეიტინგი",
-    "Description": "აღწერილობა"
+    "Description": "აღწერილობა",
+    "Related": "მსგავსი პროდუქტები"
 }
