--- a/public/assets/locales/components/en.json
+++ b/public/assets/locales/components/en.json
@@ -16,5 +16,8 @@
     "currency": "USD",
     "search": "Search store...",
     "found": "We found",
-    "for": "0 Product for"
+    "for": "0 Product for",
+    "searchError": "search.errortitle",
+    "keyword": "Please enter some search keyword",
+    "ok": "Ok"
 }
