--- a/public/assets/locales/components/ge.json
+++ b/public/assets/locales/components/ge.json
@@ -16,5 +16,8 @@
     "currency": "GEL",
     "search": "ძიება...",
     "found": "მოიძებნა",
-    "for": "0 პროდუქტი"
+    "for": "0 პროდუქტი",
+    "searchError": "შეცდომა",
+    "keyword": "შეიყვანეთ საძიებო სიტყვა",
+    "ok": "გასაგებია"
 }
