feature(sign up component)

--- a/public/assets/locales/navbar/ge.json
+++ b/public/assets/locales/navbar/ge.json
@@ -1,6 +1,6 @@
 {
     "User": "მომხმარებელი",
     "Contact_us": "კონტაქტი",
-    "Log_in": "შესვლა",
-    "Register": "რეგისტრაცია"
+    "in": "შესვლა",
+    "up": "რეგისტრაცია"
 }
