--- a/public/assets/locales/SignIn/ge.json
+++ b/public/assets/locales/SignIn/ge.json
@@ -5,5 +5,8 @@
     "email": "თქვენი ელ.ფოსტა",
     "password": "პაროლი",
     "pl_email": "ელ.ფოსტა",
-    "in": "Შესვლა"
+    "in": "Შესვლა",
+    "invalid_email": "არასწორი ელ. ფოსტა",
+    "email_required": "ელ.ფოსტა აუცილებელია",
+    "password_required": "პაროლი აუცილებელია"
 }
