--- a/public/assets/locales/components/ge.json
+++ b/public/assets/locales/components/ge.json
@@ -19,5 +19,8 @@
     "for": "0 პროდუქტი",
     "searchError": "შეცდომა",
     "keyword": "შეიყვანეთ საძიებო სიტყვა",
-    "ok": "გასაგებია"
+    "ok": "გასაგებია",
+    "profile": "პროფილი",
+    "settings": "პარამეტრები",
+    "out": "გამოსვლა"
 }
