--- a/public/assets/locales/navbar/en.json
+++ b/public/assets/locales/navbar/en.json
@@ -2,5 +2,6 @@
     "User": "User",
     "Contact_us": "Contact Us",
     "in": "LogIn",
-    "up": "Register"
+    "up": "Register",
+    "hello": "Hello!"
 }
