--- a/public/assets/locales/navbar/ge.json
+++ b/public/assets/locales/navbar/ge.json
@@ -2,5 +2,6 @@
     "User": "მომხმარებელი",
     "Contact_us": "კონტაქტი",
     "in": "შესვლა",
-    "up": "რეგისტრაცია"
+    "up": "რეგისტრაცია",
+    "hello": "გამარჯობა!"
 }
