--- a/public/assets/locales/ContactPage/ge.json
+++ b/public/assets/locales/ContactPage/ge.json
@@ -8,8 +8,8 @@
     "Home": "საწყისი გვერდი",
     "placeholder_1": "შეგვატყობინეთ, როგორ შეგვიძლია დაგეხმაროთ",
     "placeholder_2": "დატოვე კომენტარი...",
-    "email_invalid": "ელფოსტის მისამართი არასწორია",
-    "email_required": "გთხოვთ შეავსოთ ეს ველი.",
+    "email_invalid": "ელ.ფოსტის მისამართი არასწორია",
+    "email_required": "გთხოვთ შეავსოთ ველი",
     "subject_required": "საგანის ველი აუცილებელია",
     "Feedback_Sent": "თქვენი პასუხი წარმატებით გაიგზავნა"
 }
