--- a/public/assets/locales/SignUp/en.json
+++ b/public/assets/locales/SignUp/en.json
@@ -7,9 +7,12 @@
     "phone": "Phone number",
     "email": "Email",
     "password": "Password",
+    "confirmPassword": "Confirm Password",
     "invalid_email": "Invalid email",
     "email_is_required": "Email is required",
     "password_is_required": "Password is required",
+    "Confirm_password_required": "Confirm password is required",
+    "Password_not_match": "Password does not match",
     "short": "Too Short!",
     "long": "Too Long!",
     "name_required": "First name is required",
