--- a/public/assets/locales/SignUp/ge.json
+++ b/public/assets/locales/SignUp/ge.json
@@ -3,6 +3,7 @@
     "already": "უკვე გაქვთ ანგარიში?",
     "login": "შესვლა",
     "name": "სახელი",
+    "lastname": "გვარი",
     "phone": "Ტელეფონის ნომერი",
     "email": "ელ.ფოსტა",
     "password": "პაროლი",
