--- a/public/assets/locales/components/ge.json
+++ b/public/assets/locales/components/ge.json
@@ -11,7 +11,7 @@
     "Category": "კატეგორია",
     "Price": "ფასი",
     "Rating": "რეიტინგი",
-    "Description": "აღწერილობა",
+    "Description": "აღწერა",
     "Related": "მსგავსი პროდუქტები",
     "currency": "GEL",
     "search": "ძიება...",
@@ -22,5 +22,9 @@
     "ok": "გასაგებია",
     "profile": "პროფილი",
     "settings": "პარამეტრები",
-    "out": "გამოსვლა"
+    "out": "გამოსვლა",
+    "more": "მეტის ჩვენება...",
+    "less": "ნაკლების ჩვენება",
+    "prev": "წინა",
+    "next": "შემდეგი"
 }
