--- a/public/assets/locales/userSettings/ge.json
+++ b/public/assets/locales/userSettings/ge.json
@@ -15,5 +15,6 @@
     "invalid_number": "არასწორი მობილურის ნომერი",
     "number_required": "ტელეფონის ნომერი აუცილებელია",
     "successfully": "ინფორმაცია წარმატებით შეიცვალა",
-    "error_occurred": "დაფიქსირდა შეცდომა, ცადეთ თავიდან!"
+    "error_occurred": "დაფიქსირდა შეცდომა, ცადეთ თავიდან!",
+    "Make_changes": "შეიტანეთ ცვლილებები და შემდეგ განაახლეთ"
 }
