--- a/public/assets/locales/search/ge.json
+++ b/public/assets/locales/search/ge.json
@@ -2,5 +2,7 @@
     "search": "ძიების შედეგები",
     "found": "მოიძებნა",
     "product": "პროდუქტი",
-    "home": "საწყისი"
+    "home": "საწყისი",
+    "nomore": "შედეგი აღარ არის",
+    "loading": "იტვირთება..."
 }
