--- a/public/assets/locales/components/en.json
+++ b/public/assets/locales/components/en.json
@@ -4,7 +4,7 @@
     "Home": "Home",
     "crumb": "products",
     "empty": "Cart is empty",
-    "buy": "Buy now",
+    "checkout": "Checkout",
     "total": "Total",
     "Brand": "Brand",
     "Title": "Model",
