--- a/public/assets/locales/components/ge.json
+++ b/public/assets/locales/components/ge.json
@@ -4,7 +4,7 @@
     "Home": "მთავარი",
     "crumb": "პროდუქტები",
     "empty": "კალათა ცარიელია",
-    "buy": "იყიდე ეხლა",
+    "checkout": "ყიდვა",
     "total": "მთლიანად",
     "Brand": "ბრენდი",
     "Title": "მოდელი",
