complete(form styles structure)

--- a/public/assets/locales/Checkout/ge.json
+++ b/public/assets/locales/Checkout/ge.json
@@ -2,5 +2,5 @@
     "currency": "GEL",
     "moneyback": "ფულის დაბრუნების გარანტია",
     "within": "შეძენიდან 30 დღის განმავლობაში",
-    "total": "ჯამური ღირებულება"
+    "total": "მთლიანი ღირებულება"
 }
