--- a/public/assets/locales/Checkout/ge.json
+++ b/public/assets/locales/Checkout/ge.json
@@ -3,9 +3,16 @@
     "moneyback": "ფულის დაბრუნების გარანტია",
     "within": "შეძენიდან 30 დღის განმავლობაში",
     "total": "მთლიანი ღირებულება",
+    "empty_msg": "შეკვეთის განსახორციელებლად გთხოვთ გადახვიდეთ პროდუქციის გვერდზე და კალათაში დაამატოთ სასურველი პროდუქტი",
 
     "name_on_card": "Სახელი ბარათზე",
 
+    "payment": "გადახდა წარმატებით განხორციელდა",
+    "warrning": "თქვენი კალათა ცარიელია !",
+
+    "products": "პროდუქციის გვერდი",
+
+    "secure_checkout": "უსაფრთხო შეკვეთა",
     "full_name": "Სრული სახელი",
     "email": "ელ.ფოსტა",
     "card_number": "Ბარათის ნომერი",
