--- a/public/assets/locales/components/en.json
+++ b/public/assets/locales/components/en.json
@@ -1,30 +1,32 @@
 {
-    "Add": "Add to Cart",
-    "remove": "Remove Item",
-    "Home": "Home",
-    "crumb": "products",
-    "empty": "Cart is empty",
-    "checkout": "Checkout",
-    "total": "Total",
-    "Brand": "Brand",
-    "Title": "Model",
-    "Category": "Category",
-    "Price": "Price",
-    "Rating": "Rating",
-    "Description": "Description",
-    "Related": "Related Products",
-    "currency": "USD",
-    "search": "Search store...",
-    "found": "We found",
-    "for": "0 Product for",
-    "searchError": "search.errortitle",
-    "keyword": "Please enter some search keyword",
-    "ok": "Ok",
-    "profile": "Profile",
-    "settings": "Settings",
-    "out": "Sign out",
-    "more": "Show more...",
-    "less": "Show less",
-    "prev": "Previous",
-    "next": "Next"
+  "Add": "Add to Cart",
+  "remove": "Remove Item",
+  "Home": "Home",
+  "crumb": "products",
+  "empty": "Cart is empty",
+  "checkout": "Checkout",
+  "total": "Total",
+  "total_price": "Total price",
+  "cart": "Cart",
+  "Brand": "Brand",
+  "Title": "Model",
+  "Category": "Category",
+  "Price": "Price",
+  "Rating": "Rating",
+  "Description": "Description",
+  "Related": "Related Products",
+  "currency": "USD",
+  "search": "Search store...",
+  "found": "We found",
+  "for": "0 Product for",
+  "searchError": "search.errortitle",
+  "keyword": "Please enter some search keyword",
+  "ok": "Ok",
+  "profile": "Profile",
+  "settings": "Settings",
+  "out": "Sign out",
+  "more": "Show more...",
+  "less": "Show less",
+  "prev": "Previous",
+  "next": "Next"
 }
