update(some logic and design)

--- a/public/assets/locales/components/en.json
+++ b/public/assets/locales/components/en.json
@@ -28,5 +28,6 @@
   "more": "Show more...",
   "less": "Show less",
   "prev": "Previous",
-  "next": "Next"
+  "next": "Next",
+  "admin": "admin Panel"
 }
