--- a/public/assets/locales/components/ge.json
+++ b/public/assets/locales/components/ge.json
@@ -24,9 +24,10 @@
   "ok": "გასაგებია",
   "profile": "პროფილი",
   "settings": "პარამეტრები",
-  "out": "გამოსვლა",
+  "out": "გასვლა",
   "more": "მეტის ჩვენება...",
   "less": "ნაკლების ჩვენება",
   "prev": "წინა",
-  "next": "შემდეგი"
+  "next": "შემდეგი",
+  "admin": "ადმინ პანელი"
 }
