--- a/public/assets/locales/Admin/ge.json
+++ b/public/assets/locales/Admin/ge.json
@@ -34,5 +34,11 @@
   "price_required": "ფასი აუცილებელია",
 
   "category_required": "კატეგორია აუცილებელია",
-  "description_required": "აღწერა აუცილებელია"
+  "description_required": "აღწერა აუცილებელია",
+
+  "you_want": "გსურთ ამ პროდუქტის წაშლა?",
+  "yes": "დიახ",
+  "no": "არა",
+  "success": "პროდუქტი წარმატებით წაიშალა",
+  "could_not": "პროდუქტის წაშლა ვერ მოხერხდა, გთხოვთ სცადოთ ხელახლა"
 }
