--- a/public/assets/locales/Admin/ge.json
+++ b/public/assets/locales/Admin/ge.json
@@ -17,6 +17,8 @@
 
   "successfully": "პროდუქტი წარმატებით განახლდა",
   "error_occurred": "პროდუქტის განახლება ვერ მოხერხდა, გთხოვთ სცადოთ ხელახლა",
+  "successfully_create": "პროდუქტი წარმატებით შეიქმნა",
+  "error_occurred_create": "პროდუქტის შექმნა ვერ მოხერხდა, გთხოვთ სცადოთ ხელახლა",
 
   "brand_required": "ბრენდი აუცილებელია",
   "model_required": "მოდელი აუცილებელია",
