--- a/public/assets/locales/Admin/ge.json
+++ b/public/assets/locales/Admin/ge.json
@@ -13,7 +13,9 @@
   "currency": "GEL",
 
   "select": "აირჩიეთ სურათი",
+  "back": "უკან",
   "save": "შენახვა და განახლება",
+  "create_product": "შექმენით ახალი პროდუქტი",
 
   "successfully": "პროდუქტი წარმატებით განახლდა",
   "error_occurred": "პროდუქტის განახლება ვერ მოხერხდა, გთხოვთ სცადოთ ხელახლა",
