update(image uploaders logic)

--- a/public/assets/locales/Admin/en.json
+++ b/public/assets/locales/Admin/en.json
@@ -13,6 +13,7 @@
   "currency": "USD",
 
   "select": "Select Image",
+  "only_image": "Only photos are allowed to be uploaded!",
   "back": "Back",
   "save": "Save and update",
   "create_product": "Create a new product",
