--- a/public/assets/locales/Admin/ge.json
+++ b/public/assets/locales/Admin/ge.json
@@ -13,6 +13,7 @@
   "currency": "GEL",
 
   "select": "აირჩიეთ სურათი",
+  "only_image": "დასაშვებია მხოლოდ ფოტოების ატვირთვა!",
   "back": "უკან",
   "save": "შენახვა და განახლება",
   "create_product": "შექმენით ახალი პროდუქტი",
